Added CSS variables as per style guide.

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  background-color: var(--stone150);
 }
 
 img,
@@ -46,4 +47,26 @@ h6 {
   isolation: isolate;
 }
 
-/*  */
+/* CSS Variables */
+
+:root {
+  --white: #ffffff;
+  --stone100: #f3e6d8;
+  --stone150: #e4ded8;
+  --stone600: #5f574e;
+  --stone900: #302d2c;
+  --brown800: #854632;
+  --rose800: #7b284f;
+  --rose50: #fff5fa;
+}
+
+.wrapper {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.recipe-container {
+  background-color: var(--white);
+}
